# ucp

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  README_en.md  README_zh.md
.github/workflows/: release.yml
assets/: app.css
assets/icons/: app.icns
assets/styles/: base.css  dialog.css  filter_tabs.css  history_list.css  layout.css  list_header.css  responsive.css  settings.css  status.css  top_bar.css
installer/windows/: nsis-hooks.nsh
scripts/: reinstall.ps1
src/: app.rs  clipboard_watcher.rs  components.rs  i18n.rs  main.rs  model.rs  storage.rs  updater.rs
src/app/: status_bar.rs
src/components/: filter_tabs.rs  floating_settings_button.rs  history_list.rs  icons.rs  mod.rs  settings_page.rs  tabs.rs  top_bar.rs
src/components/history_list/: actions.rs  file_display.rs  mod.rs  row.rs  selection.rs
src/model/: image.rs
src/platform/: clipboard.rs  file_icon.rs  mod.rs  single_instance.rs  startup.rs
src/platform/clipboard/: unix.rs
src/storage/: image_cache.rs  schema.rs  settings.rs  tests.rs
