[package]
name = "ucp"
version = "0.1.0"
edition = "2024"
description = "A Windows-first desktop clipboard history app built with Dioxus."

[dependencies]
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-primitives = { path = "vendor/dioxus-primitives", default-features = false }
futures-channel = "0.3"
futures-timer = "3"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = { version = "0.17", default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5", features = ["monitor"] }
windows-sys = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
