[package]
name = "ucp"
version = "0.1.2"
edition = "2024"
description = "A desktop clipboard history app built with Dioxus."
license = "MIT"

[dependencies]
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-primitives = { path = "vendor/dioxus-primitives", default-features = false }
futures-channel = "0.3"
futures-timer = "3"
futures-util = "0.3"
global-hotkey = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = { version = "0.17", default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5", features = ["monitor"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
